# advent-of-code

./: Cargo.toml  README.md  tags  template.rs
2018/: day01.py  day02.py  day03.py  day04.py  prelude.py  test_all_days.py
2018/input/: day01:Zone.Identifier
2019/: adventofcode.ex  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  intcode.py  logger.py  machine.py  prelude.py  template.py  test_day01.py  test_day07.py
2020/: Cargo.toml  get_input.sh  template.rs
2020/input/: 12-2.sample  day15  day19
2020/src/: bool_xor.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day8.rs  dict.rs  lib.rs  main.rs  my_benchmark.rs  parse_each.rs  part.rs  prelude.rs  quick_dict.rs  (+3 more)
2020/src/days/: day04.rs  day12.rs  day18.rs  day19.rs
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  test_examples.py
2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
2023/: .session.vim  Cargo.toml  aoc.sh  blah.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  get_input.sh  new_day.sh  template.py  template.rs  template_toml.toml  utility.py
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  my_benchmark.rs  point2d.rs  quick_dict.rs  strides.rs
2024/: Makefile  day01.odin  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day20_2.py  day21.py  day22.py  day23.py  day24.py  day25.py  new.py  pyproject.toml  template.py  utility.py
2024/input/: 06  10s2  11s  15s2  16s2  20s
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  new.py  pyproject.toml  utility.py
2025/input/: 08
input/: 19-2.in  19-2.sample  20.sample.2
src/: aoc2020_day01.rs  aoc2020_day02.rs  aoc2020_day03.rs  aoc2020_day04.rs  aoc2020_day05.rs  aoc2020_day06.rs  day14.rs  main.rs  strides.rs  time_macro.rs
src/aoc2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day25.rs  mod.rs
src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  mod.rs
