[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[[bin]]
name = "aoc2020_day01"
path = "src/aoc2020_day01.rs"

[[bin]]
name = "aoc2020_day02"
path = "src/aoc2020_day02.rs"

[[bin]]
name = "aoc2020_day03"
path = "src/aoc2020_day03.rs"

[[bin]]
name = "aoc2020_day04"
path = "src/aoc2020_day04.rs"

[[bin]]
name = "aoc2020_day05"
path = "src/aoc2020_day05.rs"

[[bin]]
name = "aoc2020_day06"
path = "src/aoc2020_day06.rs"
