[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0.22"
structopt = "0.3"
rayon = "1.5.0"

[profile.release]
lto=true
