[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"

