[package]
name = "aoc2020"
version = "2020.24.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[profile.release]
codegen-units=1
lto="thin"
panic="abort"

#[lib]
#name="aoc"
#path="src/lib.rs"

#[[bin]]
#name="day23"
#path="bin/day23/main.rs"

#[[bin]]
#name="day24"
#path="bin/day24/main.rs"

