[package]
name = "aoc2020"
version = "2020.25.1"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[profile.release]
codegen-units=1
lto="thin"
panic="abort"

[lib]
name="aoc2020"
path="src/lib.rs"

[[bin]]
name="aoc2020day01"
path="bin/day01/main.rs"

[[bin]]
name="aoc2020day02"
path="bin/day02/main.rs"

[[bin]]
name="aoc2020day03"
path="bin/day03/main.rs"

[[bin]]
name="aoc2020day04"
path="bin/day04/main.rs"

[[bin]]
name="aoc2020day05"
path="bin/day05/main.rs"

[[bin]]
name="aoc2020day06"
path="bin/day06/main.rs"

[[bin]]
name="aoc2020day07"
path="bin/day07/main.rs"

[[bin]]
name="aoc2020day08"
path="bin/day08/main.rs"

[[bin]]
name="aoc2020day09"
path="bin/day09/main.rs"

[[bin]]
name="aoc2020day10"
path="bin/day10/main.rs"

[[bin]]
name="aoc2020day11"
path="bin/day11/main.rs"

[[bin]]
name="aoc2020day12"
path="bin/day12/main.rs"

[[bin]]
name="aoc2020day13"
path="bin/day13/main.rs"

[[bin]]
name="aoc2020day14"
path="bin/day14/main.rs"

[[bin]]
name="aoc2020day15"
path="bin/day15/main.rs"

[[bin]]
name="aoc2020day16"
path="bin/day16/main.rs"

[[bin]]
name="aoc2020day17"
path="bin/day17/main.rs"

[[bin]]
name="aoc2020day18"
path="bin/day18/main.rs"

[[bin]]
name="aoc2020day19"
path="bin/day19/main.rs"

[[bin]]
name="aoc2020day20"
path="bin/day20/main.rs"

[[bin]]
name="aoc2020day21"
path="bin/day21/main.rs"

[[bin]]
name="aoc2020day22"
path="bin/day22/main.rs"

[[bin]]
name="aoc2020day23"
path="bin/day23/main.rs"

[[bin]]
name="aoc2020day24"
path="bin/day24/main.rs"

[[bin]]
name="aoc2020day25"
path="bin/day25/main.rs"
