[package]
name = "aoc2020"
version = "2020.25.1"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[lib]
name="aoc2020"
path="src/lib.rs"

[[bin]]
name="aoc2020"
path="src/main.rs"
