[package]
name = "aoc2023"
version = "2023.6.2"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
derive_more = "0.99.17"
rayon = "1.8.0"
num = "0.4.1"

[lib]
name="aoc2023"
path="src/lib.rs"

[[bin]]
name="day01"
path="src/day01.rs"

[[bin]]
name="day02"
path="src/day02.rs"

[[bin]]
name="day03"
path="src/day03.rs"

[[bin]]
name="day04"
path="src/day04.rs"

[[bin]]
name="day05"
path="src/day05.rs"

