[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "simple-chalk>=0.1.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
