[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.1.3",
    "geopandas>=1.0.1",
    "geoplot>=0.5.1",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "jedi>=0.19.2",
    "jupyter>=1.1.1",
    "jupyter-lsp>=2.2.5",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.9.3",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "notebook>=7.3.1",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "ortools>=9.14.6206",
    "pandas>=2.2.3",
    "pandoc>=2.4",
    "pillow>=11.0.0",
    "polars>=1.17.1",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "simple-chalk>=0.1.0",
    "sqlalchemy>=2.0.36",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
[tool.ruff.lint]
ignore=["F403", "F405"]
